--- a/index.html
+++ b/index.html
@@ -1,11 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <!--================bootstrap-link=================== -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--============slick-slider-link============== -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+        integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
+        integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Ai-stocks</title>
 </head>
+
 <body>
-    
+    <!--============Statistics-For-Today================ -->
+    <!-- <h4 class="fw-bold ff_orbitron text-4xl">0<span class="counter" data-target="1">1 </span></h4> -->
+
+
+
+
+    <!--============Average-Earnings============== -->
+    <section>
+        <div class="slider_container mw_1164 bg-black">
+            <div class="row">
+                <div class="col-7">
+                    <Slider class="responsive slider-container mb_12" {...settings}>
+                        <div class="px_6">
+                            <img src="./assets/images/png/knx-img.png" alt="knximg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/google.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/spotify.png" alt="spotifyimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/tesla.png" alt="teslaimg" class="w-100 br_8">
+                        </div>
+                      
+                    </Slider>
+                    <Slider class="averageslider slider-container" {...settings}>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                        <div class="px_6">
+                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
+                        </div>
+                    </Slider>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- counter -->
+    <script>
+        const counters = document.querySelectorAll(".counter");
+        counters.forEach((counter) => {
+            counter.innerText = "0";
+            const updateCounter = () => {
+                const target = +counter.getAttribute("data-target");
+                const count = +counter.innerText;
+                const increment = target / 200;
+                if (count < target) {
+                    counter.innerText = Math.ceil(count + increment);
+                    setTimeout(updateCounter, 1);
+                } else counter.innerText = target;
+            };
+            updateCounter();
+        });
+    </script>
+    <script>
+        $('.responsive').slick({
+            dots: false,
+            infinite: true,
+            arrows: false,
+            autoplay: true,
+            autoplaySpeed: 0,
+            speed: 3000,
+            slidesToShow: 4.2,
+            slidesToScroll: 4,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    </script>
+    <script>
+        $('.averageslider').slick({
+            dots: false,
+            infinite: true,
+            arrows: false,
+            autoplay: true,
+            autoplaySpeed: 1000,
+            speed: 300,
+            slidesToShow: 4.2,
+            slidesToScroll: 4,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    </script>
+    <!--======================botstrap-link=========================-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!--====================slick-slider-links==========================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
+        integrity="sha512-eP8DK17a+MOcKHXC5Yrqzd8WI5WKh6F1TIk5QZ/8Lbv+8ssblcz7oGC8ZmQ/ZSAPa7ZmsCU4e/hcovqR8jfJqA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </script>
 </body>
+
 </html>
