--- a/index4.html
+++ b/index4.html
@@ -14,7 +14,7 @@
     <section>
         <div class="container py-5">
             <div class="max_w_Faq mx-auto">
-                <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
+                <h2 class="ff_ff_opensanssans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
                 <div class="pt-5 mt_12">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
@@ -136,10 +136,10 @@
                     </div>
                 </div>
                 <div class=" mt-3">
-                    <p class="open fw-bold fs_sm lh_md white mb-0 ">
+                    <p class="ff_opensans fw-bold fs_sm lh_md white mb-0 ">
                         Disclaimer
                     </p>
-                    <p class="open fw-normal fs_xs lh_xxl white mb-0 lh_xxl opacity pt-3">
+                    <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 lh_xxl opacity pt-3">
                         This website is not a news agency, information website, or blog. It is a webpage aimed at promotional publications that use the technique of storytelling to illustrate the scope of the services and products offered. Therefore, the story told on this page
                         is an infomercial or advertisement for informational and functional purposes, for an understanding of the potential of what is proposed general, risk warning. Investing activities involve a high level of risk and may result in
                         the total loss of the amount invested. For this reason, these activities may not be suitable for every type of investor. You should not invest money that you cannot afford to lose.
@@ -150,10 +150,10 @@
             <div class=" FooterBottomPadding">
                 <div class="container">
                     <div class="d-flex justify-content-between flex-wrap align-items-center">
-                        <p class="open fw-normal fs_xs lh_xxl white opacity mb-0 ">
+                        <p class="ff_opensans fw-normal fs_xs lh_xxl white opacity mb-0 ">
                             Privacy Policy <span>|</span> Conditions
                         </p>
-                        <p class="open fw-normal fs_xs lh_xxl white mb-0 opacity pt-2 pt-sm-0 ">
+                        <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 opacity pt-2 pt-sm-0 ">
                             Report Abuse | Copyright@2024
                         </p>
                     </div>
