--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/png/favicon.png" type="image/x-icon">
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,56 +21,74 @@
 
 <body>
     <!--============Statistics-For-Today================ -->
-    <!-- <h4 class="fw-bold ff_orbitron text-4xl">0<span class="counter" data-target="1">1 </span></h4> -->
+    <section class="pt_Statistics mb_2 position-relative">
+        <div class="Statistics_ellips2"></div>
+        <div class="container mw_1164">
+            <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-5"><span
+                    class="gradient_text">Statistics</span> For Today</h2>
+            <div class="row pt-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center">
+                    <div class="border_Statistics d-flex justify-content-center align-items-center">
+                        <div class="mb-4">
+                            <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
+                                    data-target="1">1 </span></h4>
+                        </div>
+                    </div>
+                    <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_262 fs_6lg mt-3 pt-1">Places left
+                        to
+                        register</p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
+                    <div class="border_Statistics d-flex justify-content-center align-items-center">
+                        <div class=" mb-4">
+                            <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
+                                    data-target="135">1 </span></h4>
+                        </div>
+                    </div>
+                    <p class="ff_opensans fw-semibold text-white lh_5xl text-center mw_309 fs_6lg mt-3 pt-1">Average
+                        Registrations
+                        per day</p>
+                </div>
 
-
-
-
-    <!--============Average-Earnings============== -->
-    <section>
-        <div class="slider_container mw_1164 bg-black">
-            <div class="row">
-                <div class="col-7">
-                    <Slider class="responsive slider-container mb_12" {...settings}>
-                        <div class="px_6">
-                            <img src="./assets/images/png/knx-img.png" alt="knximg" class="w-100 br_8">
+                <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
+                    <div class="border_Statistics d-flex justify-content-center align-items-center">
+                        <div class=" mb-4">
+                            <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
+                                    data-target="5"></span>x</h4>
                         </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/google.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/spotify.png" alt="spotifyimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/tesla.png" alt="teslaimg" class="w-100 br_8">
-                        </div>
-                      
-                    </Slider>
-                    <Slider class="averageslider slider-container" {...settings}>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                        <div class="px_6">
-                            <img src="./assets/images/png/googleimg.png" alt="googleimg" class="w-100 br_8">
-                        </div>
-                    </Slider>
+                    </div>
+                    <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_327 fs_6lg mt-3 pt-1">The Average
+                        Earnings
+                        Increase</p>
                 </div>
             </div>
         </div>
+        </div>
     </section>
+    <!--============Average-Earnings============== -->
+    <section class="py_average position-relative">
+        <div class="Statistics_ellips1"></div>
+        <div class="Statistics_ellips3"></div>
+        <div class="">
+            <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-4 pe-xxl-5">
+                <div class="mw_800 mw_750 w-100">
+                    <img src="./assets/images/png/average-img.png" alt="average-img" class="w-100">
+                </div>
+                <div class='mw_518 mw_450 mt-3 pt-1 pt-lg-0 mt-lg-0'>
+                    <div class="ps-sm-4 ps-3 ps-xl-3 ps-xxl-0">
+                        <h2 class="ff_opensans fw-bold text-white fs_8xl lh_7xl mb-5">Average Earnings of a Registered
+                            User From a
+                            <span class="gradient_text">Deposit of $250 to 521$</span>
+                        </h2>
+                        <div class="mt-xl-3">
+                            <button class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </section>
 
 
     <!-- counter -->
@@ -126,6 +145,41 @@
     </script>
     <script>
         $('.averageslider').slick({
+            dots: false,
+            infinite: true,
+            arrows: false,
+            autoplay: true,
+            autoplaySpeed: 1000,
+            speed: 300,
+            slidesToShow: 4.2,
+            slidesToScroll: 4,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    </script>
+    <script>
+        $('.relianceslider').slick({
             dots: false,
             infinite: true,
             arrows: false,
