--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,8 @@
 </head>
 
 <body style="background-color: #010306;">
-    <header class=" bg-hero-img position-relative pb-58 overflow-x-clip  z-1">
+    <!-- header section  -->
+    <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
         <nav class=" py-12 nav-background position-relative  z-1">
             <div class="container">
                 <div class=" d-flex  justify-content-between align-items-center ">
@@ -47,8 +48,8 @@
                     class=" d-flex align-items-center  align-items-lg-start    justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
                     <div class="max-w-654">
                         <div class="vedio position-relative  z-1">
-                            <video id="vid" src="./assets/images/vedio/car.mp4" autoplay="autoplay" loop
-                                class="w-100  h-100 "></video>
+                            <video src="./assets/images/vedio/car.mp4" autoplay="autoplay" loop
+                                class="w-100  h-100 d-block  "></video>
                             <span class="vedio-tag"><svg width="121" height="120" viewBox="0 0 121 120" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <rect x="1.25532" y="1.14594" width="118.021" height="118.021" rx="59.0105"
@@ -183,24 +184,30 @@
                             <p class="ff_opensans fw-normal  fs-xs lh_xsm text-center  text-white  mb-0">In a matter of
                                 minutes, one of our AI mentors will contact you, No Experience Required!
                             </p>
-                            <input type="text" placeholder="First Name"
-                                class="email-input-style-header mt-4 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
-                            <input type="text" placeholder="Last Name"
-                                class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
-                            <input type="text" placeholder="Email"
-                                class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
-                            <div class=" d-flex align-items-center rounded-1 overflow-hidden    bg-white  mt-3  ">
-                                <div class=" d-flex align-items-center bg-number  gap-1 p-3">+91 <svg width="8"
-                                        height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
-                                    </svg>
+                            <form>
+                                <input id="name" type="text" placeholder="First Name"
+                                    class="email-input-style-header mt-4 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
+                                <p class=" mb-0 text-white " id="errorname"></p>
+                                <input id="lastname" type="text" placeholder="Last Name"
+                                    class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
+                                <p class=" mb-0 text-white " id="errorlastname"></p>
+                                <input id="email" type="email" placeholder="Email"
+                                    class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
+                                <p class=" mb-0 text-white " id="erroremail"></p>
+                                <div class=" d-flex align-items-center rounded-1 overflow-hidden    bg-white  mt-3  ">
+                                    <div class=" d-flex align-items-center bg-number  gap-1 p-3">+91 <svg width="8"
+                                            height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
+                                        </svg>
+                                    </div>
+                                    <input id="number" type="tel" placeholder="Phone Number"
+                                        class="email-input-style-header  ff_opensans fw-normal   fs-xs lh_xsm c-black-100 ">
                                 </div>
-                                <input type="text" placeholder="Phone Number"
-                                    class="email-input-style-header  ff_opensans fw-normal   fs-xs lh_xsm c-black-100 ">
-                            </div>
-                            <button
-                                class=" mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Get
-                                Started</button>
+                                <p class=" mb-0 text-white " id="errornumber"></p>
+                                <button id="submit" type="submit"
+                                    class=" mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Get
+                                    Started</button>
+                            </form>
                         </div>
                         <p class="ff_opensans fw-bold  fs_md lh_2lg text-center text-white mt-14 mb-0 ">1 Spot Left</p>
                         <span class="ellipes-card-email d-none  d-md-block "></span>
@@ -243,12 +250,105 @@
                 </div>
             </div>
         </div>
-        <span class=" ellipes1headerleft-top"></span>
-        <span class=" ellipes2headerleft-topdown"></span>
-        <span class=" ellipes3headerleft-bottom"></span>
-        <span class=" ellipes4headerright-top"></span>
-        <span class=" ellipes5headerright-bottom"></span>
+        <span class=" ellipes1headerleft-top d-none d-sm-block"></span>
+        <span class=" ellipes2headerleft-topdown d-none d-sm-block"></span>
+        <span class=" ellipes3headerleft-bottom d-none d-sm-block"></span>
+        <span class=" ellipes4headerright-top d-none d-sm-block"></span>
+        <span class=" ellipes5headerright-bottom d-none d-sm-block"></span>
     </header>
+    <!-- silder by  keyframes  -->
+    <section class="position-relative overflow-hidden mx-auto mb-5">
+        <div class="d-flex align-items-center gap-20 brand_slider_parent position-relative  start-0 top-0 h-100">
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex align-items-center gap-20 brand_slider_parent2 position-absolute left-0 top-0 h-100">
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- next one -->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
