--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--============Statistics-For-Today================ -->
-    <section class="pt_Statistics mb_2 position-relative">
+    <section class="pt_Statistics mb_2 position-relative z-1">
         <div class="Statistics_ellips2"></div>
         <div class="container mw_1164">
             <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-5"><span
@@ -66,7 +66,7 @@
         </div>
     </section>
     <!--============Average-Earnings============== -->
-    <section class="py_average position-relative">
+    <section class="py_average position-relative z-1">
         <div class="Statistics_ellips1"></div>
         <div class="Statistics_ellips3"></div>
         <div class="">
