--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Ai-stocks</title>
 </head>
 
-<body>
+<body class="">
     <!--============Statistics-For-Today================ -->
     <section class="pt_Statistics mb_2 position-relative z-1">
         <div class="Statistics_ellips2"></div>
