--- a/index2.html
+++ b/index2.html
@@ -12,22 +12,23 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="Assets/css/style2.css" />
+    <link rel="stylesheet" href="Assets/css/style.css" />
   </head>
   <body>
     <!--------------------------------------------------- benifit-section --------------------------------------------------->
-    <div class="section_bg pt-4 overflow-hidden">
-      <div class="container position-relative mw_990 py-5 mt-1">
+    <div class="section_bg pt-md-4 overflow-hidden">
+      <div class="container position-relative mw_990 py-md-5 py-4 mt-1">
         <span class="ellipse_1 position-absolute"></span>
         <span class="ellipse_2 position-absolute"></span>
 
         <h1
-          class="mw_733 mb-5 ff_opensans fw-bold lh-7xl fs-8xl text-white text-center mx-auto"
+          class="mw_733 mb-lg-5 mb-3 ff_opensans fw-bold lh_7xl fs_8xl text-white text-center mx-auto"
         >
           How to <span class="font-gradient">Benefit</span> By Investing In AI
           Stocks For
           <span class="font-gradient">High Returns</span>
         </h1>
-        <div class="row align-items-center justify-content-center">
+        <div class="row align-items-center pb-md-5 mb-2 justify-content-center">
           <div
             class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-center position-relative"
           >
@@ -44,12 +45,12 @@
                   alt="trading-image"
                 />
                 <p
-                  class="mb-15 off-black3 text-center fw-bold lh-2lg fs_2md mt-4"
+                  class="mb-15 off-black3 text-center fw-bold lh_2lg fs_2md mt-4"
                 >
                   Al revolution!
                 </p>
                 <p
-                  class="fs-sm mw_224 fw-normal lh-2md text-center ff_opensans gray"
+                  class="fs_sm mw_224 fw-normal lh_2md text-center ff_opensans gray"
                 >
                   Don't miss out on the Al revolution! Investors have witnessed
                   remarkable returns up to 166.32% in Al Stocks in recent years.
@@ -62,13 +63,13 @@
               alt="ellipse"
             />
           </div>
-          <div class="col-lg-6 col-sm-12 pt-5 pt-lg-0">
+          <div class="col-lg-6 col-sm-12 pt-5">
             <div class="row pb-lg-5 mb-1">
               <div class="col-lg-6 col-md-3 col-sm-6 pe_10 col-12">
                 <div
                   class="benifit_card mb-27 d-flex flex-column align-items-center"
                 >
-                  <span class="icons_card mb-32"
+                  <span class="icons_card "
                     ><svg
                       width="37"
                       height="37"
@@ -98,7 +99,7 @@
                     </svg>
                   </span>
                   <p
-                    class="text-white ff_opensans fs-md lh-lg fw-bold text-center"
+                    class="text-white ff_opensans fs_md lh_lg fw-bold text-center"
                   >
                     Artificial <br />
                     Intelligence Stocks
@@ -109,7 +110,7 @@
                 <div
                   class="benifit_card mb-27 d-flex flex-column align-items-center"
                 >
-                  <span class="icons_card mb-32"
+                  <span class="icons_card "
                     ><svg
                       width="38"
                       height="33"
@@ -139,7 +140,7 @@
                     </svg>
                   </span>
                   <p
-                    class="text-white ff_opensans fs-md lh-lg fw-bold text-center"
+                    class="text-white ff_opensans fs_md lh_lg fw-bold text-center"
                   >
                     AI Revolution!
                   </p>
@@ -149,7 +150,7 @@
                 <div
                   class="benifit_card mb-27 d-flex flex-column align-items-center"
                 >
-                  <span class="icons_card mb-32"
+                  <span class="icons_card "
                     ><svg
                       width="38"
                       height="32"
@@ -179,7 +180,7 @@
                     </svg>
                   </span>
                   <p
-                    class="text-white mb-0 ff_opensans fs-md lh-lg fw-bold text-center"
+                    class="text-white mb-0 ff_opensans fs_md lh_lg fw-bold text-center"
                   >
                     Technological <br />
                     Breakthroughs
@@ -190,7 +191,7 @@
                 <div
                   class="benifit_card mb-27 d-flex flex-column align-items-center"
                 >
-                  <span class="icons_card mb-32"
+                  <span class="icons_card "
                     ><svg
                       width="37"
                       height="37"
@@ -278,7 +279,7 @@
                     </svg>
                   </span>
                   <p
-                    class="text-white ff_opensans fs-md lh-lg fw-bold text-center"
+                    class="text-white ff_opensans fs_md lh_lg fw-bold text-center"
                   >
                     Artificial <br />
                     Intelligence
@@ -289,12 +290,11 @@
           </div>
         </div>
         <p
-          class="fw-semibold my-md-5 mb-0 ff_opensans fs-lg lh-4xl text-center text-white"
+          class="fw-semibold my-md-5 mb-0 ff_opensans fs_lg lh_4xl mw_974 text-center text-white"
         >
-          As per our research and data evaluation from experts, the <br />
-          price of these AI Stocks will rise over time. Today's Investment
-          <br />
-          can give a return of more than 130.66% in 2024.
+          As per our research and data evaluation from experts, the price of
+          these AI Stocks will rise over time. Today's Investment can give a
+          return of more than 130.66% in 2024.
         </p>
       </div>
     </div>
@@ -302,13 +302,13 @@
     <div class="section_bg pt-md-4 mt_10">
       <div class="container mw_1200 py-lg-5 mt-1">
         <h1
-          class="mw_733 mb-5 ff_opensans fw-bold lh-7xl mb-3 fs-8xl text-white text-center mx-auto"
+          class="mw_733 mb-md-5 pt-4 ff_opensans fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto"
         >
           Understanding <span class="font-gradient">Leveraged</span> Accounts
           and <span class="font-gradient">Buying Power</span>
         </h1>
         <p
-          class="text-white ff_opensans fw-normal mx-auto fs-xs lh-md text-center mw_946 mb-3 mb-md-5"
+          class="text-white ff_opensans fw-normal mx-auto fs_xs lh_md text-center mw_946 mb-3 mb-md-5"
         >
           Trading with leveraged accounts in CFDs provides traders with
           increased buying power, enabling them to attain superior results
@@ -328,9 +328,9 @@
                 src="./assets/images/png/understanding-man-1.png"
                 alt="man-img"
               />
-              <p class="ff_opensans fw-bolder text-white lh-md fs-xs">
+              <p class="ff_opensans fw-bolder italic text-white lh_md fs_xs">
                 John invested
-                <span class="fw-normal">
+                <span class="fw-normal style_normal">
                   $250 without leverage, so his buying power was $250, and he
                   could potentially earn up to $40.</span
                 >
@@ -353,9 +353,9 @@
                 src="./assets/images/png/understanding-man-1.png"
                 alt="man-img"
               />
-              <p class="ff_opensans fw-bolder text-white lh-md fs-xs">
+              <p class="ff_opensans fw-bolder italic text-white lh_md fs_xs">
                 Mike invested
-                <span class="fw-normal">
+                <span class="fw-normal style_normal">
                   the same amount but utilized leverage of 1 to 30, giving him a
                   buying power of $7,500. With this leverage, Mike achieved
                   returns of $1200, showcasing the significant impact of
@@ -374,12 +374,12 @@
           class="d-flex flex-column align-items-center pb-xl-5 justify-content-center"
         >
           <button
-            class="maximize_btn fw-bold ff_opensans fs-xs lh-xsm off-black4"
+            class="maximize_btn fw-bold ff_opensans fs_xs lh_xsm off-black4"
           >
             Maximize Your Profit
           </button>
           <p
-            class="text-white mt-2 mb-xl-5 text-center ff_opensans fw-normal fs-xs lh-xsm"
+            class="text-white mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm"
           >
             With Leveraged Accounts and Enhanced Buying Power Today!
           </p>
