--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     </div>
 
     <!--------------------------------------------------- benifit-section --------------------------------------------------->
-    <div class="section_bg pt-md-4 overflow-hidden">
+    <div class="section_bg pt-md-4 overflow-x-clip">
         <div class="container position-relative mw_990 py-md-5 py-4 mt-1">
             <span class="ellipse_1 position-absolute"></span>
             <span class="ellipse_2 position-absolute"></span>
