--- a/index.html
+++ b/index.html
@@ -514,11 +514,13 @@
                     </div>
                 </div>
             </div>
-            <p class="fw-semibold my-md-5 mb-0 ff_opensans fs_lg lh_4xl mw_974 text-center text-white">
-                As per our research and data evaluation from experts, the price of
-                these AI Stocks will rise over time. Today's Investment can give a
-                return of more than 130.66% in 2024.
-            </p>
+            <div class="d-flex justify-content-center align-items-center">
+                <p class="fw-semibold my-md-5 mb-0 ff_opensans fs_lg lh_4xl mw_974 text-center text-white">
+                    As per our research and data evaluation from experts, the price of
+                    these AI Stocks will rise over time. Today's Investment can give a
+                    return of more than 130.66% in 2024.
+                </p>
+            </div>
         </div>
     </div>
 
