nav button hover

--- a/index3.html
+++ b/index3.html
@@ -17,12 +17,12 @@
             <div class="container">
                 <div class=" d-flex  justify-content-between align-items-center ">
                     <ul class=" mb-0 ps-0">
-                        <li><a href="#" class=" text-decoration-none ff_opensans fw-bold  fs_8xl lh_8xl text-white  ">AI
+                        <li><a aria-label="logo" href="#" class=" text-decoration-none ff_opensans fw-bold  fs_8xl lh_8xl text-white  ">AI
                                 STOCKS</a></li>
                     </ul>
                     <ul class=" mb-0 ps-0">
-                        <li><a href="#"
-                                class=" text-decoration-none ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Sign
+                        <li><a aria-label="sign-up" href="#"
+                                class=" text-decoration-none d-block ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Sign
                                 Up</a></li>
                     </ul>
                 </div>
@@ -204,7 +204,7 @@
                                         class="email-input-style-header  ff_opensans fw-normal   fs-xs lh_xsm c-black-100 ">
                                 </div>
                                 <p class=" mb-0 text-white " id="errornumber"></p>
-                                <button id="submit" type="submit"
+                                <button aria-label="fromsubmit" id="submit" type="submit"
                                     class=" mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Get
                                     Started</button>
                             </form>
