--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 </div>
             </div>
             <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
-                <button class="maximize_btn fw-bold ff_opensans fs_xs lh_xsm off-black4">
+                <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm off-black4">
                     Maximize Your Profit
                 </button>
                 <p class="text-white mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
