--- a/index4.html
+++ b/index4.html
@@ -27,7 +27,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button ff_opensans fw-bold fs_xs lh-md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-     1. Do I need trading experience to invest in AI Stocks?
+    <span class="d-none d-sm-block">1. </span> Do I need trading experience to invest in AI Stocks?
       </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -39,7 +39,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-      2. How does AI improve my trading results?
+    <span class="d-none d-sm-block">2. </span>  How does AI improve my trading results?
       </button>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -51,7 +51,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-     <span class="max_w_heading"> 3. How much does it cost to use the AI Trading Platform, and are there any discounts available?</span>
+     <span class="max_w_heading d-sm-flex gap-1"> <span class="d-none d-sm-block">3. </span> How much does it cost to use the AI Trading Platform, and are there any discounts available?</span>
       </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -63,7 +63,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-     <span class="max_w_heading">4. How can i start using the trading platform?</span>
+     <div class="max_w_heading d-sm-flex gap-1"><span class="d-none d-sm-block">4. </span> How can i start using the trading platform?</div>
       </button>
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -89,11 +89,11 @@
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !</h3>
                             <form id="signupForm">
-                                <div class="d-sm-flex align-items-center gap-2 mt-4">
-                                    <div class="w-100 w-sm-50"> <input id="name" type="text" placeholder="First Name" class="email-input-style-header ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place ">
+                                <div class="d-sm-flex align-items-center gap-2 mt-4 mt-sm-0">
+                                    <div class="w-100 w-sm-50"> <input id="name" type="text" placeholder="First Name" class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
                                         <p class="mb-0 text-white" id="errorname"></p>
                                     </div>
-                                    <div class="w-100 w-sm-50"> <input id="lastname" type="text" placeholder="Last Name" class="email-input-style-header ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place  mt-2 mt-sm-0">
+                                    <div class="w-100 w-sm-50"> <input id="lastname" type="text" placeholder="Last Name" class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
                                         <p class="mb-0 text-white" id="errorlastname"></p>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
                                     <input id="number" type="tel" placeholder="Phone Number" class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
                                 </div>
                                 <p class="mb-0 text-white" id="errornumber"></p>
-                                <button id="submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button">Sign Up</button>
+                                <button id="submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans black btnSignup fw-bold fs_xs lh_xsm">Sign Up</button>
                             </form>
                         </div>
                     </div>
