--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <div class="row pt-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center">
                     <div class="border_Statistics d-flex justify-content-center align-items-center">
-                        <div class="mb-4">
+                        <div>
                             <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
                                     data-target="1">1 </span></h4>
                         </div>
@@ -597,7 +597,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
                     <div class="border_Statistics d-flex justify-content-center align-items-center">
-                        <div class=" mb-4">
+                        <div>
                             <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
                                     data-target="135">1 </span></h4>
                         </div>
@@ -609,7 +609,7 @@
 
                 <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
                     <div class="border_Statistics d-flex justify-content-center align-items-center">
-                        <div class=" mb-4">
+                        <div>
                             <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
                                     data-target="5"></span>x</h4>
                         </div>
