--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
         </header>
         <!-- silder by  keyframes  -->
-        <section class="position-relative d-flex gap-20 overflow-hidden mx-auto mb-5">
+        <section class="position-relative d-flex gap-20 overflow-x-clip mx-auto mb-5">
             <div class="d-flex align-items-center gap-20 brand_slider_parent position-relative  start-0 top-0 h-100">
                 <div class="man-profile-card  d-flex  align-items-center  gap-3">
                     <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
@@ -641,12 +641,11 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!--============Average-Earnings============== -->
         <section class="py_average position-relative z-1">
-            <div class="Statistics_ellips1 d-none d-md-block"></div>
-            <div class="Statistics_ellips3  d-none d-md-block"></div>
+            <div class="Statistics_ellips1 d-none d-xl-block"></div>
+            <div class="Statistics_ellips3  d-none d-xl-block"></div>
                 <div
                     class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-4 pe-xxl-5">
                     <div class="mw_800 mw_750 w-100">
@@ -667,7 +666,6 @@
 
                 </div>
         </section>
-
     </div>
     <!-- counter -->
     <script>
