--- a/index4.html
+++ b/index4.html
@@ -88,27 +88,27 @@
                     <div class="col-12 col-lg-6 pt-4 pt-lg-0">
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !</h3>
-                            <form id="signupForm">
+                            <form class="pt-4 mt-sm-2">
                                 <div class="d-sm-flex align-items-center gap-2 mt-4 mt-sm-0">
-                                    <div class="w-100 w-sm-50"> <input id="name" type="text" placeholder="First Name" class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
-                                        <p class="mb-0 text-white" id="errorname"></p>
+                                    <div class="w-100 w-sm-50"> <input id="firstName" type="text" placeholder="First Name" class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
+                                        <p class="mb-0 text-white" id="errorFirstName"></p>
                                     </div>
-                                    <div class="w-100 w-sm-50"> <input id="lastname" type="text" placeholder="Last Name" class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
-                                        <p class="mb-0 text-white" id="errorlastname"></p>
+                                    <div class="w-100 w-sm-50"> <input id="lastName" type="text" placeholder="Last Name" class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
+                                        <p class="mb-0 text-white" id="errorLastName"></p>
                                     </div>
                                 </div>
-                                <input id="email" type="email" placeholder="Email" class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place">
-                                <p class="mb-0 text-white" id="erroremail"></p>
+                                <input id="Email" type="email" placeholder="Email" class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place">
+                                <p class="mb-0 text-white" id="errorEmail"></p>
                                 <div class="d-flex align-items-center rounded-1 overflow-hidden mt-3 borderInput">
                                     <div class="d-flex align-items-center bg_grayblack white gap-1 p-3">+91
                                         <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
             </svg>
                                     </div>
-                                    <input id="number" type="tel" placeholder="Phone Number" class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
+                                    <input id="Number" type="tel" placeholder="Phone Number" class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
                                 </div>
-                                <p class="mb-0 text-white" id="errornumber"></p>
-                                <button id="submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans black btnSignup fw-bold fs_xs lh_xsm">Sign Up</button>
+                                <p class="mb-0 text-white" id="errorNumber"></p>
+                                <button id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans black btnSignup fw-bold fs_xs lh_xsm">Sign Up</button>
                             </form>
                         </div>
                     </div>
@@ -137,11 +137,11 @@
                 <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
                         <p class="open fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity pt-3 d-none d-sm-block ">
+                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3 d-none d-sm-block ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
-                        <p class=" d-sm-none ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity pt-3">Privacy Policy | Conditions | Report Abuse/ Spam</p>
+                        <p class=" d-sm-none ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3">Privacy Policy | Conditions | Report Abuse/ Spam</p>
                     </div>
                     <div class="d-flex jusity-content-center flex-column py-3 mt_12 mt-sm-0 py-sm-0">
                         <p class="open fw-semibold fs_sm lh_xxl white mb-0 text-center">
@@ -179,7 +179,7 @@
                     <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 ">
                         Disclaimer
                     </p>
-                    <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 lh_xxl opacity pt-3">
+                    <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 lh_xxl opacity-80 pt-3">
                         This website is not a news agency, information website, or blog. It is a webpage aimed at promotional publications that use the technique of storytelling to illustrate the scope of the services and products offered. Therefore, the story told on this page
                         is an infomercial or advertisement for informational and functional purposes, for an understanding of the potential of what is proposed general, risk warning. Investing activities involve a high level of risk and may result in
                         the total loss of the amount invested. For this reason, these activities may not be suitable for every type of investor. You should not invest money that you cannot afford to lose.
@@ -190,11 +190,11 @@
             <div class=" FooterBottomPadding">
                 <div class="container">
                     <div class="d-flex justify-content-center justify-content-sm-between flex-wrap align-items-center">
-                        <p class="ff_opensans fw-normal fs_xs lh_xxl white opacity mb-0  d-none d-sm-block">
+                        <p class="ff_opensans fw-normal fs_xs lh_xxl white opacity-80 mb-0  d-none d-sm-block">
                             Privacy Policy <span>|</span> Conditions
                         </p>
-                        <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 opacity pt-2 pt-sm-0 ">
-                            <span class="d-none d-sm-block"></span> Report Abuse | Copyright@2024
+                        <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 opacity-80 pt-2 pt-sm-0 ">
+                            <span class="d-none d-sm-block"></span> Report Abuse | Copyright@<span id="currentYear"></span>
                         </p>
                     </div>
                 </div>
