--- a/index.html
+++ b/index.html
@@ -648,7 +648,78 @@
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
             <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-4 pe-xxl-5">
                 <div class="mw_800 mw_750 w-100">
-                    <img src="./assets/images/png/average-img.png" alt="average-img" class="w-100">
+                    <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parent3 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/knx-img.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/google.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/spotify.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/tesla.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parent4 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/knx-img.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/google.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/spotify.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/tesla.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                    </div>
+                    <div class="position-relative mt-12 d-flex gap-20 overflow-hidden mx-auto">
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parentalternate3 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/company-name.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/ford.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/samsung.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/tata-img.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parentalternate4 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/company-name.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/ford.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/samsung.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/tata-img.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                    </div>
+                    <div class="position-relative mt-12 d-flex gap-20 overflow-hidden mx-auto">
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parent3 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/company-name.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/reliance.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/stripe.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/adani.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                        <div
+                            class="d-flex align-items-center gap-12 brand_slider_parent4 position-relative  start-0 top-0 h-100">
+                            <img src="./assets/images/png/company-name.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/reliance.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/stripe.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/png/adani.png" alt="ford"
+                                class="company-dimension rounded-1 w-100">
+                        </div>
+                    </div>
                 </div>
                 <div class='mw_518 mw_450 mt-3 pt-1 pt-lg-0 mt-lg-0'>
                     <div class="ps-sm-4 ps-3 ps-xl-3 ps-xxl-0">
