--- a/index4.html
+++ b/index4.html
@@ -108,7 +108,7 @@
                                     <input id="Number" type="tel" placeholder="Phone Number" class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
                                 </div>
                                 <p class="mb-0 text-white" id="errorNumber"></p>
-                                <button id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans black btnSignup fw-bold fs_xs lh_xsm">Sign Up</button>
+                                <button id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans  fw-bold fs_xs lh_xsm text-black btnSignup">Sign Up</button>
                             </form>
                         </div>
                     </div>
